@@ -261,6 +261,7 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/malloc.m4
   m4/mbstate_t.m4
   m4/nls.m4
+  m4/nocrash.m4
   m4/po.m4
   m4/printf-posix.m4
   m4/progtest.m4
